# wasf-certificates

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml  requirements.txt
.docker/: Dockerfile.prod.api
.docker/config/nginx/sites-available/: site.conf
.docker/etc/: settings_local.prod.py.example
.github/workflows/: registry-build-push.yml  sync.yml  test.yml
apps/backpack/: utils.py
apps/badgeuser/: api_2fa.py  models.py  serializers_v1.py  v1_api_urls.py
apps/badgeuser/migrations/: 0033_badgeuser_backup_codes_and_more.py
apps/badgeuser/tests/: test_2fa.py
apps/issuer/: helpers.py  models.py  permissions.py  serializers_v1.py
apps/issuer/management/commands/: fix_wasf_issuer_info.py
apps/issuer/tests/: test_learningpath_permissions.py
apps/mainsite/: badge_pdf.py  oauth2_api.py  settings.py  settings_tests.py  utils.py  views.py
apps/mainsite/templates/account/email/: 2fa_disabled_message.html  2fa_disabled_subject.txt  email_badge_request_message.html  email_badge_request_message.txt  email_badge_request_subject.txt  email_confirmation_message.html  email_confirmation_message.txt  email_confirmation_signup_message.html  email_confirmation_signup_message.txt  email_confirmation_signup_subject.txt  email_confirmation_subject.txt  email_staff_request_message.html  email_staff_request_messagt.txt  email_staff_request_subject.txt  password_reset_confirmation_message.html  password_reset_confirmation_message.txt  password_reset_confirmation_subject.txt  password_reset_key_message.html  password_reset_key_message.txt  password_reset_key_subject.txt  staff_request_confirmed_message.html  staff_request_confirmed_message.txt  staff_request_confirmed_subject.txt
apps/mainsite/templates/email/: base.html
apps/mainsite/templates/issuer/email/: base_notify_award.html  notify_admins_issuer_verified_message.html  notify_admins_issuer_verified_message.txt  notify_admins_issuer_verified_subject.txt  notify_admins_message.html  notify_admins_message.txt  notify_admins_subject.txt  notify_earner_message.txt  notify_issuer_network_invitation_message.html  notify_issuer_network_invitation_message.txt  notify_issuer_network_invitation_subject.txt  notify_issuer_network_update_message.html  notify_issuer_network_update_message.txt  notify_issuer_network_update_subject.txt  notify_issuer_unverified_message.html  notify_issuer_unverified_message.txt  notify_issuer_unverified_subject.txt  notify_issuer_verified_message.html  notify_issuer_verified_message.txt  notify_issuer_verified_subject.txt  notify_micro_degree_earner_message.txt  notify_micro_degree_earner_subject.txt  notify_staff_badge_request_via_qrcode_message.html  notify_staff_badge_request_via_qrcode_message.txt  notify_staff_badge_request_via_qrcode_subject.txt
apps/mainsite/templates/issuer/email/quotas/: base_notify_request.html  notify_sales_message.txt  notify_sales_subject.txt
apps/mainsite/templates/public/: base.html
locales/de/LC_MESSAGES/: django.mo  django.po
openbadges/verifier/: verifier.py
openbadges_bakery/: png_bakery.py
