[project]
name = "badgr-server"
version = "2.2.0"
description = "Digital badge management for issuers, earners, and consumers"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "backports-csv==1.0.4",
    "badgecheck==1.1.8",
    "base58>=2.1.1",
    "bleach==3.3.0",
    "boto==2.49.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "cairocffi==0.9.0",
    "cairosvg==2.7.1",
    "celery>=5.3.0",
    "cffi>=1.15.0",
    "cryptography==42.0.5",
    "cssselect==0.9.2",
    "defusedxml>=0.7.1",
    "django==5.2.8",
    "django-allauth>=0.63.0",
    "django-autoslug==1.9.8",
    "django-basic-models==4.0.0",
    "django-boto==0.3.12",
    "django-cachemodel==2.2.0",
    "django-celery-results>=2.5.0",
    "django-cors-headers>=4.0.0",
    "django-dbbackup>=4.4.0",
    "django-filter==23.5",
    "django-lti>=0.5.1",
    "django-markdownify==0.1.0",
    "django-mjml>=1.4",
    "django-mock-queries==2.1.5",
    "django-oauth-toolkit>=2.3.0",
    "django-object-actions>=3.2.0",
    "django-prometheus==2.3.1",
    "djangorestframework>=3.14.0",
    "djangorestframework-gis>=1.2.0",
    "drf-spectacular>=0.29.0",
    "gender-guesser>=0.4.0",
    "geopy==2.4.1",
    "idna==2.8",
    "importlib-resources==5.10.0",
    "ipaddress==1.0.14",
    "jsonfield==3.2.0",
    "jsonschema==2.6.0",
    "lti==0.9.5",
    "markdown>=3.5.0",
    "mock==5.2.0",
    "mozilla-django-oidc>=4.0.1",
    "mysqlclient>=2.2.0",
    "netaddr>=1.3.0",
    "oauthlib==3.1.0",
    "pillow>=8.3.2",
    "puremagic==1.6",
    "pyasn1>=0.4.1",
    "pycparser==2.14",
    "pyjwt>=2.9.0",
    "pyld==2",
    "pymemcache==4.0.0",
    "pyopenssl==24.2.1",
    "pypng==0.20220715.0",
    "pysaml2==6.5.1",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger==0.1.2",
    "python-resize-image==1.1.19",
    "pytz>=2021.1",
    "qrcode>=7.4.2",
    "ratelimit>=2.2.1",
    "redis>=5.0.0",
    "reportlab>=3.6.9",
    "requests>2.25.0",
    "requests-cache>=1.1.0",
    "requests-oauthlib>=2.0.0",
    "responses==0.12.1",
    "rfc3987==1.3.4",
    "ruff>=0.11.10",
    "rules==3.3",
    "s3transfer>=0.10.0",
    "semver==2.6.0",
    "setuptools>=75.3.2, <81",
    "simplejson==3.6.4",
    "six>=1.16.0",
    "sqlparse>=0.3.1",
    "svg2rlg>=0.3",
    "svglib>=1.5.1",
    "tinycss==0.4",
    "tox>=4.28",
    "tox-uv>=1.26.2",
    "urllib3>=2.2.0",
    "uwsgi>=2.0.28",
    "wheel>=0.45.1",
    "xmlsec==1.3.14",
]

[tool.uv]
override-dependencies = [
    # pycryptodome 3.6.6 is required in outdated library badgecheck but has problems in newer environments
    'pycryptodome==3.22.0',
    # pyld 0.7.1 is required in outdated library badgecheck, but pyld > 2 is required for OB3.0,
    'pyld>=2',
    # pytz==2017 is required in outdated library badgecheck, but pytz >=2021.1 is required for python 3.10,
    'pytz>=2021.1',
    # python-jose ==3.0.1 is required in outdated library badgecheck, but python-jose >=3.4.0 is required for python 3.10,
    'python-jose>=3.4.0',
    # python-jose >=3.4.0 needs pyasn1>=0.4.1
    'pyasn1>=0.4.1',
    # jsonschema==2.6.0 is required in outdated library badgecheck, but jsonschema >=4.23.0 is required for Django 4.2
    'jsonschema>=4.23.0',
    # click==6.7 is required in outdated library badgecheck, but click >=8.1.2 is required for Celery 5.x
    'click>=8.1.2',
]

[tool.djlint]
profile = "django"
ignore = "H021,H005,H031,D018,H006,H019,H023,H030,H006,H013, H025"
max_attribute_length=120

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.tox]
env_list = ["py310"]

[tool.tox.env.py310]
system_site_packages = true
skip_install = true
setenv = { DJANGO_SETTINGS_MODULE = "mainsite.settings_tests" }
allowlist_externals = ["rm"]
commands = [
    ["python", "manage.py", "test" ,"--noinput"]
]
commands_post = [
    ["rm", "-r", "./apps/mainsite/tests/testfiles/uploads"]
]
